syntax = "proto3";

option go_package = "kloudlite.io/rpc/console";

service ConsoleInfra {
  rpc UpdateStatus(ResourceUpdate) returns (UpdateStatusVoid);
}

message ResourceUpdate {
  string resourceName = 1;
  string resourceType = 2;
  string projectId = 3;
  string clusterId = 4;
  map<string, string> status = 5;
}

message UpdateStatusVoid {}

